--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "front",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
+  "homepage": "https://hoft.pro/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "emailjs-com": "^2.6.4",
+    "framer-motion": "^2.9.4",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "react-transition-group": "^4.4.1",
     "react-yandex-maps": "^4.5.0",
     "resolve-url-loader": "^3.1.2",
     "styled-components": "^5.2.1",
