--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-toastify": "^6.1.0",
     "react-yandex-maps": "^4.5.0",
     "resolve-url-loader": "^3.1.2",
     "styled-components": "^5.2.1",
